--- a/jitsi/templates/deployment.yaml
+++ b/jitsi/templates/deployment.yaml
@@ -28,25 +28,129 @@ spec:
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
-        - name: {{ .Chart.Name }}
-          securityContext:
-            {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
-          ports:
-            - name: http
-              containerPort: 80
-              protocol: TCP
-          livenessProbe:
-            httpGet:
-              path: /
-              port: http
-          readinessProbe:
-            httpGet:
-              path: /
-              port: http
-          resources:
-            {{- toYaml .Values.resources | nindent 12 }}
+        - name: jicofo
+          image: jitsi/jicofo
+          imagePullPolicy: Always
+          env:
+            - name: XMPP_SERVER
+              value: {{ .Values.jitsi.xmppServer }}
+            - name: XMPP_DOMAIN
+              value: {{ include "jitsi.XMPP_DOMAIN" . }}
+            - name: XMPP_AUTH_DOMAIN
+              value: {{ include "jitsi.XMPP_AUTH_DOMAIN" . }}
+            - name: XMPP_INTERNAL_MUC_DOMAIN
+              value: {{ include "jitsi.XMPP_INTERNAL_MUC_DOMAIN" . }}
+            - name: JICOFO_COMPONENT_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: jitsi-config
+                  key: JICOFO_COMPONENT_SECRET
+            - name: JICOFO_AUTH_USER
+              value: focus
+            - name: JICOFO_AUTH_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: jitsi-config
+                  key: JICOFO_AUTH_PASSWORD
+            - name: TZ
+              value: {{ .Values.jitsi.timeZone }}
+            - name: JVB_BREWERY_MUC
+              value: {{ .Values.jitsi.jvb.breweryMuc }}
+        - name: prosody
+          image: jitsi/prosody
+          imagePullPolicy: Always
+          env:
+            - name: XMPP_DOMAIN
+              value: {{ include "jitsi.XMPP_DOMAIN" . }}
+            - name: XMPP_AUTH_DOMAIN
+              value: {{ include "jitsi.XMPP_AUTH_DOMAIN" . }}
+            - name: XMPP_MUC_DOMAIN
+              value: {{ include "jitsi.XMPP_MUC_DOMAIN" . }}
+            - name: XMPP_INTERNAL_MUC_DOMAIN
+              value: {{ include "jitsi.XMPP_INTERNAL_MUC_DOMAIN" . }}
+            - name: JICOFO_COMPONENT_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: jitsi-config
+                  key: JICOFO_COMPONENT_SECRET
+            - name: JVB_AUTH_USER
+              value: {{ .Values.jitsi.jvb.user }}
+            - name: JVB_AUTH_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: jitsi-config
+                  key: JVB_AUTH_PASSWORD
+            - name: JICOFO_AUTH_USER
+              value: {{ .Values.jitsi.jicofo.user }}
+            - name: JICOFO_AUTH_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: jitsi-config
+                  key: JICOFO_AUTH_PASSWORD
+            - name: TZ
+              value: {{ .Values.jitsi.timeZone }}
+            - name: JVB_TCP_HARVESTER_DISABLED
+              value: "true"
+        - name: web
+          image: jitsi/web
+          imagePullPolicy: Always
+          env:
+            - name: XMPP_SERVER
+              value: {{ .Values.jitsi.xmppServer }}
+            - name: XMPP_DOMAIN
+              value: {{ include "jitsi.XMPP_DOMAIN" . }}
+            - name: XMPP_AUTH_DOMAIN
+              value: {{ include "jitsi.XMPP_AUTH_DOMAIN" . }}
+            - name: XMPP_MUC_DOMAIN
+              value: {{ include "jitsi.XMPP_MUC_DOMAIN" . }}
+            - name: XMPP_INTERNAL_MUC_DOMAIN
+              value: {{ include "jitsi.XMPP_INTERNAL_MUC_DOMAIN" . }}
+            - name: JICOFO_AUTH_USER
+              value: {{ .Values.jitsi.jicofo.user }}
+            - name: XMPP_BOSH_URL_BASE
+              value: http://127.0.0.1:5280
+            - name: TZ
+              value: {{ .Values.jitsi.timeZone }}
+            - name: JVB_TCP_HARVESTER_DISABLED
+              value: "true"
+        - name: jvb
+          image: jitsi/jvb
+          imagePullPolicy: Always
+          env:
+            - name: XMPP_SERVER
+              value: {{ .Values.jitsi.xmppServer }}
+            - name: DOCKER_HOST_ADDRESS
+              value: <Set the address for any node in the cluster here>
+            - name: XMPP_DOMAIN
+              value: {{ include "jitsi.XMPP_DOMAIN" . }}
+            - name: XMPP_AUTH_DOMAIN
+              value: {{ include "jitsi.XMPP_AUTH_DOMAIN" . }}
+            - name: XMPP_INTERNAL_MUC_DOMAIN
+              value: {{ include "jitsi.XMPP_INTERNAL_MUC_DOMAIN" . }}
+            - name: JVB_STUN_SERVERS
+              value: stun.l.google.com:19302,stun1.l.google.com:19302,stun2.l.google.com:19302
+            - name: JICOFO_AUTH_USER
+              value: {{ .Values.jitsi.jicofo.user }}
+            - name: JVB_TCP_HARVESTER_DISABLED
+              value: "true"
+            - name: JVB_AUTH_USER
+              value: {{ .Values.jitsi.jvb.user }}
+            - name: JVB_PORT
+              value: '{{ .Values.jitsi.jvb.port }}'
+            - name: JVB_AUTH_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: jitsi-config
+                  key: JVB_AUTH_PASSWORD
+            - name: JICOFO_AUTH_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: jitsi-config
+                  key: JICOFO_AUTH_PASSWORD
+            - name: JVB_BREWERY_MUC
+              value: {{ .Values.jitsi.jvb.breweryMuc }}
+            - name: TZ
+              value: {{ .Values.jitsi.timeZone }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
