--- a/jitsi/values.yaml
+++ b/jitsi/values.yaml
@@ -4,12 +4,6 @@
 
 replicaCount: 1
 
-image:
-  repository: nginx
-  pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
-
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
@@ -28,16 +22,8 @@ podAnnotations: {}
 podSecurityContext: {}
   # fsGroup: 2000
 
-securityContext: {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
-
 service:
-  type: ClusterIP
+  type: NodePort
   port: 80
 
 ingress:
@@ -77,3 +63,14 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+jitsi:
+  xmppServer: localhost
+  xmppDomain: meet.jitsi
+  timeZone: America/Los_Angeles
+  jicofo:
+    user: focus
+  jvb:
+    user: jvb
+    breweryMuc: jvbbrewery
+    port: 30300
