--- a/jitsi/templates/service-web.yaml
+++ b/jitsi/templates/service-web.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "jitsi.fullname" . }}-web
+  name: {{ include "jitsi.fullname" . }}
   labels:
   {{- include "jitsi.labels" . | nindent 4 }}
 spec:
