--- a/jitsi/values.yaml
+++ b/jitsi/values.yaml
@@ -32,7 +32,7 @@ ingress:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
+    - host: meet.jitsi
       paths: []
   tls: []
   #  - secretName: chart-example-tls
