--- a/jitsi/templates/ingress.yaml
+++ b/jitsi/templates/ingress.yaml
@@ -27,15 +27,11 @@ spec:
     {{- end }}
   {{- end }}
   rules:
-    {{- range .Values.ingress.hosts }}
-    - host: {{ .host | quote }}
+    - host: {{ include "jitsi.XMPP_DOMAIN" . }}
       http:
         paths:
-          {{- range .paths }}
-          - path: {{ . }}
+          - path: /
             backend:
               serviceName: {{ $fullName }}
               servicePort: {{ $svcPort }}
-          {{- end }}
-    {{- end }}
   {{- end }}
