--- a/jitsi/templates/ingress.yaml
+++ b/jitsi/templates/ingress.yaml
@@ -1,6 +1,4 @@
 {{- if .Values.ingress.enabled -}}
-{{- $fullName := include "jitsi.fullname" . -}}
-{{- $svcPort := .Values.service.port -}}
 {{- if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
 apiVersion: networking.k8s.io/v1beta1
 {{- else -}}
@@ -8,7 +6,7 @@ apiVersion: extensions/v1beta1
 {{- end }}
 kind: Ingress
 metadata:
-  name: {{ $fullName }}
+  name: {{ include "jitsi.fullname" . }}
   labels:
     {{- include "jitsi.labels" . | nindent 4 }}
   {{- with .Values.ingress.annotations }}
@@ -32,6 +30,6 @@ spec:
         paths:
           - path: /
             backend:
-              serviceName: {{ $fullName }}
-              servicePort: {{ $svcPort }}
+              serviceName: {{ include "jitsi.fullname" . }}
+              servicePort: {{ .Values.service.port }}
   {{- end }}
