--- a/jitsi/templates/deployment.yaml
+++ b/jitsi/templates/deployment.yaml
@@ -95,13 +95,13 @@ spec:
           image: jitsi/web
           imagePullPolicy: Always
           env:
-            {{- if .Values.jitsi.auth}}
+            {{- if .Values.jitsi.auth }}
             - name: ENABLE_AUTH
               value: '1'
             - name: AUTH_TYPE
               value: {{ .Values.jitsi.auth.type }}
             {{- end}}
-            {{- if not .Values.jitsi.guests }}
+            {{- if and (not .Values.jitsi.auth) (not .Values.jitsi.guests) }}
             - name: ENABLE_GUESTS
               value: '0'
             {{- end}}
