--- a/jitsi/templates/deployment.yaml
+++ b/jitsi/templates/deployment.yaml
@@ -29,7 +29,7 @@ spec:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
         - name: jicofo
-          image: jitsi/jicofo
+          image: jitsi/jicofo:stable-5142-2
           imagePullPolicy: Always
           env:
             - name: XMPP_SERVER
@@ -57,7 +57,7 @@ spec:
             - name: JVB_BREWERY_MUC
               value: {{ .Values.jitsi.jvb.breweryMuc }}
         - name: prosody
-          image: jitsi/prosody
+          image: jitsi/prosody:stable-5142-2
           imagePullPolicy: Always
           env:
             {{- if .Values.jitsi.auth }}
@@ -102,7 +102,7 @@ spec:
             - name: JVB_TCP_HARVESTER_DISABLED
               value: "true"
         - name: web
-          image: jitsi/web
+          image: jitsi/web:stable-5142-2
           imagePullPolicy: Always
           env:
             - name: XMPP_SERVER
@@ -124,7 +124,7 @@ spec:
             - name: JVB_TCP_HARVESTER_DISABLED
               value: "true"
         - name: jvb
-          image: jitsi/jvb
+          image: jitsi/jvb:stable-5142-2
           imagePullPolicy: Always
           env:
             - name: XMPP_SERVER
