added scripts for generating ingress certs

--- a/jitsi/values-microk8s.yml
+++ b/jitsi/values-microk8s.yml
@@ -1,6 +1,10 @@
 ingress:
   enabled: true
-  tls: []
+  tls: 
+    - hosts:
+      - jitsi.patrick-nuc7i7
+      secretName: ingress-certs
+        
 
 jitsi:
   xmppServer: localhost
